# vk-playground

./: .clang-tidy  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md
framework/: CMakeLists.txt  build.gradle
framework/src/aer/: application.cc  application.h
framework/src/aer/core/: arcball_controller.cc  arcball_controller.h  camera.h  common.h  defs.h  event_callbacks.h  events.cc  events.h  logger.h  singleton.h  utils.cc  utils.h
framework/src/aer/platform/: common.h  imgui_wrapper.h  swapchain_interface.h  ui_controller.h  window.h  wm_interface.h  xr_interface.h
framework/src/aer/renderer/: descriptor_set_registry.cc  descriptor_set_registry.h  gpu_resources.cc  gpu_resources.h  pipeline.h  raytracing_scene.cc  raytracing_scene.h  render_context.cc  render_context.h  renderer.cc  renderer.h  sampler_pool.h
framework/src/aer/scene/: animation.h  geometry.cc  geometry.h  host_resources.cc  host_resources.h  image_data.h  material.h  mesh.cc  mesh.h  sampler.h  texture.h  vertex_internal.h
framework/src/framework/: application.cc  application.h
framework/src/framework/backend/: allocator.cc  allocator.h  command_encoder.cc  command_encoder.h  context.cc  context.h  swapchain.cc  swapchain.h  types.h  vk_utils.cc  vk_utils.h
framework/src/framework/core/: arcball_controller.cc  arcball_controller.h  camera.h  common.h  defs.h  event_callbacks.h  events.cc  events.h  geometry.cc  geometry.h  logger.h  utils.cc  utils.h
framework/src/framework/platform/: common.h  event_callbacks.h  events.cc  events.h  imgui_wrapper.h  swapchain_interface.h  ui_controller.h  window.h  wm_interface.h  xr_interface.h
framework/src/framework/renderer/: descriptor_set_registry.cc  descriptor_set_registry.h  gpu_resources.cc  gpu_resources.h  pipeline.h  raytracing_scene.cc  raytracing_scene.h  render_context.cc  render_context.h  renderer.cc  renderer.h  sampler_pool.h
framework/src/framework/scene/: animation.h  host_resources.cc  host_resources.h  image_data.h  mesh.cc  mesh.h  sampler.h  vertex_internal.h
samples/: CMakeLists.txt
samples/00_hello/: main.cc
samples/01_triangle/: main.cc
samples/02_push_constant/: main.cc
samples/02_push_constant/shaders/: interop.h
samples/03_descriptor_set/shaders/glsl/: simple.vert.glsl
samples/06_blend_op/shaders/: interop.h
samples/07_compute/shaders/: interop.h
samples/10_material/: main.cc
samples/11_raytracing/: main.cc
samples/android/: CMakeLists.txt
samples/android/aloha/: CMakeLists.txt  build.gradle
samples/android/aloha/src/: AndroidManifest.xml
samples/android/aloha_xr/: CMakeLists.txt  build.gradle
samples/android/aloha_xr/src/: AndroidManifest.xml
samples/desktop/: CMakeLists.txt
samples/desktop/00_hello/: main.cc
samples/desktop/01_triangle/: main.cc
samples/desktop/02_push_constant/: main.cc
samples/desktop/03_descriptor_set/: main.cc
samples/desktop/03_descriptor_set/shaders/: interop.h
samples/desktop/04_texturing/: main.cc
samples/desktop/05_stencil_op/: main.cc
samples/desktop/05_stencil_op/shaders/: interop.h
samples/desktop/06_blend_op/: main.cc
samples/desktop/07_compute/: main.cc
samples/desktop/08_hdr_envmap/: main.cc
samples/desktop/09_post_process/: main.cc
samples/desktop/10_material/: main.cc
samples/desktop/11_raytracing/: main.cc
src/: CMakeLists.txt  main.cc
src/01-cube/: main.cc
src/01-cube/glsl/: fs_simple.glsl  vs_simple.glsl
src/engine/: core.cc  core.h  window.cc  window.h
src/engine/device/: buffer_manager.cc  buffer_manager.h  command_buffer.cc  command_buffer.h  context.cc  context.h  graphics_pipeline.cc  graphics_pipeline.h  render_handler.cc  render_handler.h  utils.h
src/framework/: CMakeLists.txt  application.cc  application.h  common.h  event_callbacks.h  events.cc  events.h  lina.h  utils.cc  utils.h  window.cc  window.h  wm_interface.h
src/framework/backend/: accel_struct.h  allocator.cc  allocator.h  command_encoder.cc  command_encoder.h  common.h  context.cc  context.h  swapchain.cc  swapchain.h  types.h  vk_utils.cc  vk_utils.h
src/framework/core/: arcball_controller.cc  arcball_controller.h  camera.h  common.h  geometry.cc  geometry.h  logger.h  singleton.h  utils.cc  utils.h
src/framework/fx/: envmap.cc  envmap.h  skybox.cc  skybox.h
src/framework/fx/_experimental/: compute_fx.cc  compute_fx.h  fragment_fx.cc  fragment_fx.h  fx_interface.h  fx_pipeline.cc  fx_pipeline.h  generic_fx.h  material_fx.h  post_fx_pipeline.cc  post_fx_pipeline.h  render_target_fx.cc  (+1 more)
src/framework/platform/: event_callbacks.h  events.h  window.cc  window.h  wm_interface.h
src/framework/renderer/: descriptor_set_registry.cc  descriptor_set_registry.h  framebuffer.cc  framebuffer.h  gpu_resources.cc  gpu_resources.h  graphics_pipeline.cc  graphics_pipeline.h  pipeline.h  raytracing.cc  raytracing.h  raytracing_scene.cc  raytracing_scene.h  render_target.cc  render_target.h  renderer.cc  renderer.h  sampler_pool.h
src/framework/scene/: animation.h  arcball_controller.h  camera.h  envmap.cc  envmap.h  geometry.cc  geometry.h  host_resources.cc  host_resources.h  image.h  image_data.h  material.h  material_fx_registry.cc  material_fx_registry.h  mesh.cc  mesh.h  resources.cc  resources.h  skybox.cc  skybox.h  texture.h  vertex_internal.h
src/framework/utils/: cgltf_wrapper.cc  cgltf_wrapper.h  geometry.cc  geometry.h  logger.h  singleton.h  utils.cc  utils.h
src/framework/wm/: event_callbacks.h  events.cc  events.h  window.cc  window.h  wm_interface.h
src/samples/: CMakeLists.txt
src/samples/00_hello/: main.cc
src/samples/01_triangle/: main.cc
src/samples/02_push_constant/: main.cc
src/samples/03_descriptor_set/: main.cc
src/samples/04_texturing/: main.cc
src/samples/05_stencil_op/: main.cc
src/samples/06_blend_op/: main.cc
src/samples/07_compute/: main.cc
src/samples/08_hdr_cubemap/: envmap.cc  envmap.h  main.cc  skybox.cc  skybox.h
src/samples/08_hdr_envmap/: main.cc
src/samples/09_post_process/: main.cc
src/samples/10_material/: main.cc
src/samples/11_raytracing/: main.cc
(+376 files in other folders)
